Add #__getClasses tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,5 +13,6 @@
   <script type="text/javascript" src="../lib/jQuery.toggleModifier.js"></script>
   <script type="text/javascript" src="vendor/qunit/qunit/qunit.js"></script>
   <script type="text/javascript" src="acceptance/general_behavior.js"></script>
+  <script type="text/javascript" src="unit/get_classes.js"></script>
 </body>
 </html>
