--- a/tests/index.html
+++ b/tests/index.html
@@ -14,5 +14,6 @@
   <script type="text/javascript" src="vendor/qunit/qunit/qunit.js"></script>
   <script type="text/javascript" src="acceptance/general_behavior.js"></script>
   <script type="text/javascript" src="unit/get_classes.js"></script>
+  <script type="text/javascript" src="unit/string_contains_modifier.js"></script>
 </body>
 </html>
