Improving tests organization

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,5 +13,8 @@
   <script type="text/javascript" src="../lib/jQuery.toggleModifier.js"></script>
   <script type="text/javascript" src="vendor/qunit/qunit/qunit.js"></script>
   <script type="text/javascript" src="acceptance/general_behavior.js"></script>
+  <script type="text/javascript" src="acceptance/modifier_addition.js"></script>
+  <script type="text/javascript" src="acceptance/modifier_removal.js"></script>
+  <script type="text/javascript" src="acceptance/modifier_existence_validations.js"></script>
 </body>
 </html>
